--- a/Kaiserreich Korean Translation/localisation/KR_Jabal_Shammar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Jabal_Shammar_l_english.yml
@@ -142,7 +142,7 @@ JBS_elective_al_nahyan_desc:0 "After much deliberation by our councillors, we ha
 JBS_elective_al_nahyan_rekindle_trucial_economy:0 "Rekindle Trucial Economy"
 JBS_elective_al_nahyan_rekindle_trucial_economy_desc:0 "After the collapse of the Pearl trade, the coast of the Arabian Gulf has lived it's poorest days in centuries. If we are to rekindle the flame of this once proud region, we must spare no expense"
 JBS_elective_al_nahyan_gulf_safeguards:0 "Protect the Arabian Gulf"
-JBS_elective_al_nahyan_gulf_safeguards_desc:0 "For centuries Persia coveted control of the Arabian Gulf, and now with the Ottoman Empire out of the picture, it stares at at our alliance like an angry lion waiting for an opening to pounce. We can do little to dissuade it; we best prepare for it!"
+JBS_elective_al_nahyan_gulf_safeguards_desc:0 "For centuries [PER.GetNameDef] coveted control of the Arabian Gulf, and now with the Ottoman Empire out of the picture, it stares at at our alliance like an angry lion waiting for an opening to pounce. We can do little to dissuade it; we best prepare for it!"
 JBS_elective_bani_sakhir:0 "하웨타트를 선출"
 JBS_elective_bani_sakhir_desc:0 "After much deliberation by our councillors, we have opted to grant the leadership of our Alliance to the ancient clan of the Howleitat, who have not forgotten their nomadic roots"
 JBS_elective_bani_sakhir_nomads:0 "Grand Land to Howleitat Nomads"
@@ -168,7 +168,7 @@ JBS_integration_of_yemeni_soverigns_desc:0 "The myriad rulers of Yemen, includin
 JBS_distribution_of_syrian_titles:0 "Distribution of Syrian Titles"
 JBS_distribution_of_syrian_titles_desc:0 "Syria lacks any amirs or traditional cheifs of it's own in most of its major cities, especially outside of minorities. Many titles can be distributed to loyal generals and officers, and we will reorganize Syria into a part of our alliance in due time"
 JBS_forging_a_new_iraq:0 "Forging a new Iraq"
-JBS_forging_a_new_iraq_desc:0 "As our new realm reaches the land between the rivers, the ancient and rich cities still recover from the terrible years of war and mismanagement under the Ottomans. Convincing the people that we are a better alternative to them or the perfidious persians should not be the hardest of tasks"
+JBS_forging_a_new_iraq_desc:0 "As our new realm reaches the land between the rivers, the ancient and rich cities still recover from the terrible years of war and mismanagement under the Ottomans. Convincing the people that we are a better alternative to them or the perfidious [PER.GetAdjective] should not be the hardest of tasks"
 JBS_formal_adminstration:0 "Formal Administration"
 JBS_formal_adminstration_desc:0 "As we advance our hold in these lands, we must also establish proper and formal ways to pay taxes and ensure that the state can help, reach and protect those in need of its assistance"
 JBS_future_of_arabia:0 "아라비아의 미래"
@@ -230,7 +230,7 @@ JBS_protect_oil_shipping_desc:0 "Our oil exports are a very vital part of our ec
 JBS_kuwait_naval_base:0 "Kuwait Naval Base"
 JBS_kuwait_naval_base_desc:0 "Long an stronghold for the house of Al Sabah, Kuwait will now be properly refitted to be our main port for the foreseeable future"
 JBS_naval_exercises:0 "Naval Excercises"
-JBS_naval_exercises_desc:0 "As we prepare for confrontation with Persia and other hostile powers in the Arabian Gulf, we will conduct navy exercises to ensure our fleet has actual experience at sea when conflict flares up"
+JBS_naval_exercises_desc:0 "As we prepare for confrontation with [PER.GetNameDef] and other hostile powers in the Arabian Gulf, we will conduct navy exercises to ensure our fleet has actual experience at sea when conflict flares up"
 JBS_liberation_war_of_holy_cities:0 "Liberate the Holy Cities"
 JBS_liberation_war_of_holy_cities_desc:0 "The holy cities of Mecca and Medina are held in bondage by the Ottoman Turks. It is our holy duty to liberate these holy cities under our banner."
 JBS_mobilize_the_tribes:0 "Mobilise the Tribes"
@@ -358,12 +358,12 @@ jbs.32.d:0 "We have received news from Egypt that the people their have seemed t
 jbs.32.a:0 "We shall not forget this Egypt."
 
 jbs.33.t:0 "The Sultan of Arabia declares himself Caliph"
-jbs.33.d:0 "News has reached Tehran that the Sultan of Arabia has declared himself the Caliph of Islam. The caliph of Sunni Islam specifically. The vast majority of people in Iran are Shia Muslim and consequently have little interest in what the Arab Sultan decided. We do not care about him."
+jbs.33.d:0 "News has reached Tehran that the Sultan of Arabia has declared himself the Caliph of Islam. The caliph of Sunni Islam specifically. The vast majority of people in [PER.GetNameDef] are Shia Muslim and consequently have little interest in what the Arab Sultan decided. We do not care about him."
 jbs.33.a:0 "Who cares what the Arab Sultan claims"
 
-jbs.34.t:0 "Iran Rejects our Claims"
-jbs.34.d:0 "We have received news from Iran that the people their have seemed to decide that we are not the caliph in their eyes. This is an outrage that we shall not forget."
-jbs.34.a:0 "We shall not forget this Iran"
+jbs.34.t:0 "[PER.GetNameDefCap] Rejects our Claims"
+jbs.34.d:0 "We have received news from [PER.GetNameDef] that the people their have seemed to decide that we are not the caliph in their eyes. This is an outrage that we shall not forget."
+jbs.34.a:0 "We shall not forget this [PER.GetName]"
 
 jbs.35.t:0 "The Sultan of Arabia declares himself Caliph"
 jbs.35.d:0 "The Sultan of Arabia has declared himself the Caliph of Islam. This is an obvious ploy at power. We should reject his claim, we do not need to recognise the claims"
@@ -375,7 +375,7 @@ jbs.36.a:0 "We shall not forget this Yemen"
 
 jbs.37.t:0 "Indian Muslims celebrate the renewed caliphate!"
 jbs.37.d:0 "Throughout India the Muslims have decided to celebrate the new Caliphate that has been declared by the Sultan of Arabia. While most of the elites have not taken part of this celebration, the Muslim masses of India have."
-jbs.37.a:0 "Inshalla"
+jbs.37.a:0 "Inshallah."
 
 jbs.38.t:0 "Indian Muslims accept our Claims"
 jbs.38.d:0 "We have received good news out of India. The Muslim population of India has accepted our claims as the Caliph."
@@ -383,7 +383,7 @@ jbs.38.a:0 "We shall remember this India."
 
 jbs.39.t:0 "News of the Caliphate reach Insulindia"
 jbs.39.d:0 "News of the sultan of Jabar Shammar's decision to declare himself the Caliph of Islam has reached Insulindia. Most of the Muslims in Insulindia have not approved of this decision."
-jbs.39.a:0 "Inshalla"
+jbs.39.a:0 "Inshallah."
 
 jbs.40.t:0 "Insulindian Muslims reject our Claims"
 jbs.40.d:0 "We have received good news out of Insulindia. The Muslim population of Insulindia has accepted our claims as the Caliph."
