--- a/Kaiserreich Korean Translation/localisation/KR_Persia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Persia_l_english.yml
@@ -748,13 +748,16 @@ pers.104.a:0 "Alas, Wojtek's fate shall take him to Poland."
 
 ### Decisions ###
 
-PER_coring_conquered_territory:0 "Integration of New Territory"
-PER_core_afghan_land:0 "Integrate Herat"
+PER_coring_conquered_territory:0 "새로운 영토 통합"
+PER_core_afghan_land:0 "헤라트 통합"
 PER_core_afghan_land_desc:0 "Now that we have gained control of our lands in Afghanistan again, we can begin to integrate it into Iran. However, it is going to take decades to fully intergrate the eastern area due to their Pashtun ethnic majority. In the west of Afghanistan, the population is majority Hazara, a group we can more easily integrate into our nation. The Pashtuns most likely will resist our attempts, but eventually they will accept our leadership."
-PER_core_azerbaijani_land:0 "Intergrate Azerbaijan"
+PER_core_azerbaijani_land:0 "아제르바이잔 통합"
 PER_core_azerbaijani_land_desc:0 "Azerbaijan is now under our direct rule again. After some time, most Azerbaijanis will give up on their dream of their own state, and will accept our leadership. Although there will be some resistance to our rule, we have a very large Azerbaijani minority, and the nation of Azerbaijan only existed for a few decades. Therefore, Azerbaijani resistance will be weak and futile."
-PER_core_baluchistan:0 "Integrate Baluchistan"
+PER_core_baluchistan:0 "발루치스탄 통합"
 PER_core_baluchistan_desc:0 "The state of Baluchistan has been returned to our control. The Baluchi people are a large ethnic group in our nation, so we should be able to integrate the Baluchi population fully into our state. However, they will resist our rule, due to the fact that they have been under Indian control for much time."
-PER_ottos_are_weak_decision_category:0 "Western Expansion"
-PER_ottos_are_weak_decision_decfision:0 "The Ottomans are weak!"
+PER_ottos_are_weak_decision_category:0 "서부 확장"
+PER_ottos_are_weak_decision_decfision:0 "오스만은 약하다!"
 PER_ottos_are_weak_decision_decfision_desc:0 "Recently, Egypt has declared war on the Ottoman Empire. The Ottomans have been dominating the Middle East for centuries, and now it is our moment to seek revenge. They have been showing weakness since even before the beginning of the first Weltkrieg, and now it is our time to put an end to the sick man that is the Ottomans."
+PER_country_namechange_decision:0 "국명을 이란으로 변경"
+PER_country_namechange_decision_desc:0 "Pressure is mounting from modernizing elements within our nation to push for the international community to refer to us as "Iran", the name we use for ourselves, over the outdated exonym "Persia". Quite why this is a matter of such debate we're not really sure."
+PER_IRAN:0 "새로운 국명은 이란이다"
