--- a/Kaiserreich Korean Translation/localisation/KR_Peru_l_english .yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Peru_l_english .yml
@@ -30,8 +30,8 @@ PRU_imperial_splendour_desc:0 "Our imagery, our glory and our legacy inspire the
 PRU_conquistador_legacy:0 "콩키스타도르의 유산"
 PRU_conquistador_legacy_desc:0 "We are the heirs of Pizarro, who vanquished hundreds of thousands of infidels armed only with his wit, faith and his loyal companions. Our army makes us proud and stronger in our faith."
 PRU_hispanidad_imperial:0 "Hispanidad Imperial"
-PRU_hispanidad_imperial_desc:0 "Our legacy, our history, it all leads up to the current day, where we must take a hold of our legacy and crush those who abandoned Christ in favour the Reichsmark or Marx. All the enemies of the what is pure and good in Peru have their days numbered!"
-peru_bolivian_confederation:0 "Peru-Bolivia Confederation"
+PRU_hispanidad_imperial_desc:0 "Our legacy, our history, it all leads up to the current day, where we must take a hold of our legacy and crush those who abandoned Christ in favour the Mark or Marx. All the enemies of the what is pure and good in Peru have their days numbered!"
+peru_bolivian_confederation:0 "페루-볼리비아 맹방"
 PBC_partial:0 "Confederated Union"
 PBC_full:0 "Federalised Union"
 BM_andes:0 "Black Monday hit the Andes"
