--- a/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -113,7 +113,6 @@ PLC_a_combined_constitution:0 "두 번째 대의회 소집"
 PLC_mitteleuropa_question:0 "제국 조약의 질문"
 PLC_the_revolution:0 "혁명의 불길"
 PLC_new_secret_police:0 "비밀경찰"
-PLC_fourth_international:0 "제4인터내셔널"
 PLC_join_with_france:0 "인터내셔널"
 PLC_mobilize_the_people:0 "인민 동원"
 PLC_diplomatic_offices:0 "외교부"
@@ -232,7 +231,6 @@ PLC_a_combined_constitution_desc:0 "The Great Sejm of 1788 was called shortly be
 PLC_mitteleuropa_question_desc:0 "Lithuania was member of the Mitteleuropa Alliance. Poland was not. With the combination of our two countries as one, the question remains on whether or not the Polish-Lithuanian Commonwealth will remain in the alliance or attempt to weasel their way out from under Germany's shadow."
 PLC_the_revolution_desc:0 "The flames of the Syndicalist revolution burn bright! The monarchy has been overthrown, the bourgeoisie toppled, and the future seized in the hands of the people! It is time for all men and women to join hands for the Syndicalist cause!"
 PLC_new_secret_police_desc:0 "Even with all true citizens of the Polish-Lithuanian Commune being loyal to the Syndicalist cause, there are still rats who wish nothing more than to see the common man suffering under the weight of the nobility's oppression. The new Ministry of Public Security will see to these insurrectionists."
-PLC_fourth_international_desc:0 "The Soviets, our brothers in true Syndicalism, are calling all true believers to their banner in a new alliance, the Fourth International. We must join our brothers in the fight against our materialist oppressors."
 PLC_join_with_france_desc:0 "Long the symbol of Syndicalism worldwide, the French Commune would certainly welcome us with open arms if we were to declare interest in joining the Internationale. It is high time we join arms with France, before our enemies move against us."
 PLC_mobilize_the_people_desc:0 "The revolution shall not be won by lying on our backsides! The people must rise up and seize victory themselves! All true citizens of the Commune are called to arms to defend the state from the vile nations who seek our downfall."
 PLC_diplomatic_offices_desc:0 "The Commonwealth now stands alone in a sea of shifting alliances. We must expand our diplomatic reach with new diplomatic initiatives around the globe."
@@ -533,25 +531,16 @@ plcommon.50.t:0 "The Reichspakt Question"
 plcommon.50.d:0 "With the formation of the new Polish-Lithuanian Commonwealth, our political status in the Reichspakt alliance is unclear. While Lithuania was a member of the alliance, Poland was not, and with the combination of our two governments, it seems that there is an opportunity to use Poland's status as a member outside of the alliance to leverage our way out, if we so choose.\n\nHowever, Germany is sure to see an attempt to leave as a threat to their European hegemony, and may take action against us. What should we do?"
 plcommon.50.a:0 "We still need German protection."
 plcommon.50.b:0 "We have outgrown this decaying alliance."
-plcommon.51.t:0 "The PLC Joins the Fourth International?"
-plcommon.51.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Fourth International. Should we allow them into our ranks?"
-plcommon.51.a:0 "Our brothers!"
-plcommon.51.b:0 "Their belief in our cause is flimsy."
-plcommon.52.t:0 "The International Grows!"
-plcommon.52.d:0 "The Soviet Union has accepted our entry to the Fourth International! We stand firm with our brothers in Syndicalism!"
-plcommon.52.a:0 "The wheels of revolution turn!"
-plcommon.53.t:0 "The Soviet Union Dismisses PLC Interest"
-plcommon.53.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
-plcommon.53.a:0 "Impossible!"
+#fourth internationale events removed
 plcommon.54.t:0 "The PLC Joins the Internationale?"
-plcommon.54.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Fourth International. Should we allow them into our ranks?"
+plcommon.54.d:0 "After their recent Syndicalist revolution, the new Polish-Lithuanian Commonwealth is seeking to join the ranks of true Syndicalism worldwide, the Third International. Should we allow them into our ranks?"
 plcommon.54.a:0 "Our brothers!"
 plcommon.54.b:0 "Their belief in our cause is flimsy."
 plcommon.55.t:0 "The Internationale Grows!"
-plcommon.55.d:0 "The French Commune has accepted our entry to the Fourth International! We stand firm with our brothers in Syndicalism!"
+plcommon.55.d:0 "The French Commune has accepted our entry to the Third International! We stand firm with our brothers in Syndicalism!"
 plcommon.55.a:0 "The wheels of revolution turn!"
 plcommon.56.t:0 "The French Commune Dismisses Polish Interest"
-plcommon.56.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, the Soviet Union has denied our entry into the Fourth International, stating that our belief in their ideals is too weak. Without the help of the Fourth International, our future in Europe looks bleak."
+plcommon.56.d:0 "Seemingly distrusting the new Syndicalist regime in the Polish-Lithuanian Commonwealth, France has denied our entry into the Third International, stating that our belief in their ideals is too weak. Without the help of the Third International, our future in Europe looks bleak."
 plcommon.56.a:0 "Impossible!"
 plcommon.57.t:0 "A New Constitution"
 plcommon.57.d:0 "With the Polish-Lithuanian Commonwealth growing stronger by the day, it is becoming increasingly clear that the current constitution cannot handle the new political realities of the Commonwealth. Thus, the king has promised sweeping reforms in writing a new constitution, but we now have to think about what the reforms should actually entail."
