--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -459,79 +459,79 @@ UKR_Resettlement_desc:0 "The Ukrainian nation is still divided, even though Ukra
 UKR_Crisis_Coalition:0 "동맹의 위기"
 UKR_Crisis_Coalition_desc:0 "Though the Syndicalist threat has mostly melted away due to government reforms, 'ViN' and 'OUN' have gained too much popularity among the citizens of Ukraine and their followers are inadvertently violently splitting our country apart with their nationalistic fervour. This situation cannot continue as the situation in Europe is quickly deteriorating."
 
-UKR_Dissolve_Rada:0 "Dissolve the Rada"
+UKR_Dissolve_Rada:0 "라다 해체"
 UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left and never really supported Skoropadsky's policies as Hetman. The King has been shaken out of his legislative stupor to grant Skoropadsky the authority to dissolve the Rada and form instead a loyal State Senate, stacked primarily with regime puppets and useful officials from different Ukrainian regions."
-UKR_Skoropadsky_Policy:0 "Ukrainian Unity"
+UKR_Skoropadsky_Policy:0 "우크라이나 통일"
 UKR_Skoropadsky_Policy_desc:0 "The relations between the Russians and the Ukrainians in Ukraine are good enough, but various powers try to depict them as an eternal struggle between the West and the East. We must stop this chauvinistic propaganda, but our aim is also to show that despite the common past and good relations with Russia, we are independent now and will always be."
-UKR_Army_Reforms:0 "A Professional Army"
+UKR_Army_Reforms:0 "직업군"
 UKR_Army_Reforms_desc:0 "It is obvious that the Ukrainian army is incomparable to the Russian and German behemoths, and yet it is still stronger than any neighbouring army. That's why Skoropadsky has proposed re-orientating our army towards a smaller professional force. It will help us maintain our security, and will allow us to reduce our costly defence spending."
-UKR_Peasant_State:0 "Peasant State"
+UKR_Peasant_State:0 "농민 국가"
 UKR_Peasant_State_desc:0 "Our peasants have always played a significant role in the country and its economy. With extra money available from our reduced military spending, we can reduce taxes for the poor until our agriculture recovers from Black Monday and we will become the breadbasket of Europe once again."
-UKR_Prohibit_Syndicalism:0 "Prohibit Syndicalism"
+UKR_Prohibit_Syndicalism:0 "생디칼리즘 금지"
 UKR_Prohibit_Syndicalism_desc:0 "We have reached an understanding with the pro-Russian circles, pacified the various Ukrainian movements and helped make the peasantry loyal to us. Now we have to deal with the Syndicalists. Our mass media will start a massive propaganda campaign, showing the Syndies as a malignant tumour on Slavdom. Our efforts will eventually enable us to ban many notorious left parties."
-UKR_Federalisation:0 "Federalisation"
+UKR_Federalisation:0 "연방화"
 UKR_Federalisation_desc:0 "The Syndicalists, Nationalists and the Russophiles have all tried to impose their ideas on the whole country. This has demonstrated the flaws of the centralised approach of the Hetmanate. If we give our regions more autonomy and weaken the Supreme Rada, we will be able to stop regional debates becoming flashpoints on the national stage to ensure political chaos remains a thing of the past."
 
 UKR_New_Heir:0 "계승 문제"
 UKR_New_Heir_desc:0 "King Vasily, as vigorous in his production of heirs as in running the country, has left the royal succession up for debate. There are only two realistic contenders, Leo Stefan Habsburg or Daniil Skoropadsky. Neither are completely ideal but this question must be solved sooner rather than later."
-UKR_Explosion_Dnieper:0 "Explosion on the Dnieper"
+UKR_Explosion_Dnieper:0 "드네프르에서의 폭발"
 UKR_Explosion_Dnieper_desc:0 "The death of the King has come as a shock to us all, and now one question remains - in what direction will our nation travel in the aftermath?"
-UKR_Pereyaslav_treaty:0 "Treaty of Pereyaslav"
+UKR_Pereyaslav_treaty:0 "페레야슬라프 조약"
 UKR_Pereyaslav_treaty_desc:0 "With Russian nationalists in charge of the Ukrainian government, the option is now available for us to petition the Russian government for reintegration back into Mother Russia. There is no guarantee that they would risk incurring Germany's wrath by accepting us however."
-UKR_OUN_Embargo:0 "Embargo Germany"
+UKR_OUN_Embargo:0 "독일 금수조치"
 UKR_OUN_Embargo_desc:0 "With Ukrainian nationalists dominating the government, the time has come to put the Ukrainian people first - by taking a serious gamble. For too long our nation's economy and agricultural sector has been geared towards serving the Germany people at our own expense. This will end. Protectionism is the only way we can assert ourselves."
-UKR_New_Scientists:0 "New Scientists"
+UKR_New_Scientists:0 "새로운 과학자"
 UKR_New_Scientists_desc:0 "The main aim of Hetman Skoropadsky has always been stability. With a new atmosphere of relative calm descending on the nation our young people are moving into the sciences and many companies are investing into research. We can only support this process."
 
-UKR_Ukrainian_Recovery:0 "Begin Ukrainian Recovery"
+UKR_Ukrainian_Recovery:0 "우크라이나 복구 시작"
 UKR_Ukrainian_Recovery_desc:0 "Social problems always provoke political instability. Lots of peasants join Syndicalist, nationalist or Russian separatist movements because of awful living conditions. If we want to save Ukraine from collapse, we should start a recovery programme and help the poorest grain-growers in Central Ukraine, providing our population with the cheap electricity they require. For this, we need cash."
-UKR_First_Loan:0 "German Loan For Electrification"
+UKR_First_Loan:0 "전기화를 위한 독일의 대출"
 UKR_First_Loan_desc:0 "We should ask Germany for a loan, which we will be able to use for the electrification of the the poorest grain-growers. By doing so we will improve their living conditions and help modernise their production methods. They must understand that the situation in Ukraine is unstable and it is important to help us, since we secure German interests in the East."
-UKR_First_TaxHike:0 "Taxes For The Electrification"
+UKR_First_TaxHike:0 "전기화를 위한 세금"
 UKR_First_TaxHike_desc:0 "We must use our own resources and raise taxes, since there is no other way to get investment for the programme of the electrification of the villages in the Central Ukraine. We hope that our peasants will understand us."
-UKR_Electrification:0 "New Resources"
+UKR_Electrification:0 "새로운 자원"
 UKR_Electrification_desc:0 "Our government has finally been able to electrify all the villages in Central Ukraine. As a result our peasants will be able to produce more agricultural goods and supplies. Now we also need more resources, to fuel our nation's recovery and create the tools to do it."
-UKR_Second_Loan:0 "German Loan For Industrialisation"
+UKR_Second_Loan:0 "산업화를 위한 독일의 대출"
 UKR_Second_Loan_desc:0 "We have improved the situation in Central Ukraine - it's time to do something in the Eastern part of the country. All the factories built by the Tsarist government should be modernised as fast as possible. But we need investment and technological support from our ally in Berlin!"
-UKR_Second_TaxHike:0 "Taxes For The Industrialisation"
+UKR_Second_TaxHike:0 "산업화를 위한 세금"
 UKR_Second_TaxHike_desc:0 "Electricity is available all over the Central Ukraine - now it's time to rebuild industry in the Eastern part of the country. All the factories built by the Tsarist government should be modernised as fast as possible. And that's why we have to raise taxes. Again."
-UKR_Kharkov_Industry:0 "Kharkov Industrial Zone"
+UKR_Kharkov_Industry:0 "하리코프 산업 지구"
 UKR_Kharkov_Industry_desc:0 "Kharkov has always been one of the most populated cities in Ukraine, but we have never used this advantage in our economy. Now is a perfect time to launch the formation of a new industrial region in the Kharkov region and finally make our industry strong!"
-UKR_Revive_Agriculture:0 "Revive Agriculture"
+UKR_Revive_Agriculture:0 "농업 부흥"
 UKR_Revive_Agriculture_desc:0 "Our main aim was to turn Ukraine into the breadbasket of Europe and an indispensable partner to Germany and the Reichspakt. On the contrary, we became even more dependent on German goods after Black Monday and our trade deficit widened significantly. Now we must reconstruct our national agriculture market, using our industry and new agricultural tools, to end this sorry state of affairs."
-UKR_Donbass_Industry:0 "Rejuvenate Donbass Factories"
+UKR_Donbass_Industry:0 "돈바스 공장 부활"
 UKR_Donbass_Industry_desc:0 "After a long period of political turbulence, the situation in Ukraine is more or less stable, and we have a good chance to continue reforms. Our long-term aim is to develop industry in the East of Ukraine. Thanks to the Tsarist regime, we just have to re-open old Donbass factories and modernise them a little or launch the formation of a new industrial region."
 
-UKR_Stab_econ:0 "Stabilisation"
+UKR_Stab_econ:0 "안정화"
 UKR_Stab_econ_desc:0 "Thanks to our elaborate measures, we revived our economy and mitigated the consequences of the Black Monday for Ukraine. We can hope that our economy will soon prove itself to be competitive throughout Europe."
 
 UKR_Reorg_army:0 "새로운 우크라이나 육군"
 UKR_Reorg_army_desc:0 "The army of Ukraine is in as poor condition as the Kingdom itself. Although the Black Monday crisis made us reduce the military budget, we still have enough money to launch new reforms, which will allow us to reorganise the Ministry of Defence. It's time to assert our independent military might and secure our borders from Ukraine's numerous rivals."
-UKR_Mobile:0 "Chernyakhovsky Plan"
+UKR_Mobile:0 "체르냐호프스키 계획"
 UKR_Mobile_desc:0 "Ivan Chernyakhovsky is an young ambitious colonel who has already understood that future wars would be won by heavy industry and machines. He now demands that Ukraine should do its best to provide the army with tanks and trucks. Their speed will help to use the element of surprise for our benefit."
-UKR_Mobile_Forces:0 "Trucks For The Fatherland"
+UKR_Mobile_Forces:0 "조국을 위한 트럭"
 UKR_Mobile_Forces_desc:0 "Trucks are very important for any modern army - that's why we have to use our industry and build a new model of truck. This should allow us to end our dependence on horse cavalry and cease to be a laughing stock to our major regional foes."
-UKR_Tank_Forces:0 "Tanks of the Steppe"
+UKR_Tank_Forces:0 "스텝 지대의 전차"
 UKR_Tank_Forces_desc:0 "One tank can replace more than ten soldiers on the battlefield - that's why we have to build as many tanks as we can to create one of the strongest armies in Eastern Europe. The wide plains of Ukraine are the perfect environment for their use. We cannot pass this opportunity up."
-UKR_Grand_Battle:0 "An Encircled Nation"
+UKR_Grand_Battle:0 "포위된 국가"
 UKR_Grand_Battle_desc:0 "Unfortunately, due to our geographical position our enemies are unlikely to disappear as swiftly as 'water in the Sun' as our national anthem states. Despite this we can still be ready for an any unfriendly action if we prepare our battle plans beforehand. Let's do it!"
-UKR_Firepower:0 "Thunder and Lightning"
+UKR_Firepower:0 "천둥과 번개"
 UKR_Firepower_desc:0 "Artillery is the real god of war. Using restored Tsarist and new German factories, we can make give artillery a significant role in the Ukrainian army and land a monstrous number of shells onto our enemies' heads."
-UKR_Infantry1:0 "Infantry equipment"
+UKR_Infantry1:0 "보병 장비"
 UKR_Infantry1_desc:0 "The Ukrainian soldier should be well equipped, if we want him to fight for Ukraine. Our General Staff will discuss which arms our divisions need."
-UKR_Doct1:0 "Lessons of the Interwar"
+UKR_Doct1:0 "전간기의 교훈"
 UKR_Doct1_desc:0 "A number of wars have happened since the proclamation of our independence in 1918. Russia, China, Central America, Afrika and Brazil. Now is the time we must rethink the lessons these campaigns can teach us to understand our own army's failings and possible remedies."
-UKR_Art1:0 "Support Artillery"
+UKR_Art1:0 "지원 포병"
 UKR_Art1_desc:0 "Artillery is very important for any modern army, but its integration into infantry divisions is vital. We have to do everything we can to analyse the advantages that artillery can bring to the Ukrainian army."
-UKR_Massive:0 "A Peasant Army"
+UKR_Massive:0 "농민 군대"
 UKR_Massive_desc:0 "Ukraine is one of the most populated countries in Eastern Europe. We can use children of farmers on the battlegrounds of Europe, but first we should understand where they can bring the most benefits to the country."
-UKR_Massive_inf1:0 "A Gun For Every Man"
+UKR_Massive_inf1:0 "모든 사람을 위한 총"
 UKR_Massive_inf1_desc:0 "The Weltkrieg led to the invention of many arms that revolutionised warfare. However, they must be improved and sent to our soldiers as well as the new cheap, but rapid firing rifles and carbines."
-UKR_Massive_inf2:0 "A Man For Every Gun"
+UKR_Massive_inf2:0 "모든 총을 위한 사람"
 UKR_Massive_inf2_desc:0 "We have already spent a lot of time creating equipment for various purposes. But our army claims that the equipment is still not perfect for the needs of the soldiers and officers."
-UKR_Massive_doct:0 "Troop Doctrines"
+UKR_Massive_doct:0 "병력 교리"
 UKR_Massive_doct_desc:0 "We have many soldiers and many rifles. Some might argue that such an army is weaker than a modern military resplendent with tanks and artillery galore. This could be true, but we will definitely find out which is superior on the battlefield."
-UKR_New_Army_UKR:0 "A Reorganised Army"
+UKR_New_Army_UKR:0 "재조직된 군대"
 UKR_New_Army_UKR_desc:0 "Finally, the army of Ukraine has been reorganised by the Ministry of Defence and our General Staff. It seems that the army which had been formed after 1918 to maintain the independence of Ukraine has finally come into its own."
 
 UKR_Newforpol:0 "세계 속의 우크라이나"
@@ -562,31 +562,31 @@ UKR_RUS_Galicia_desc:0 "Galicia is the last part of the Kievan Rus which was und
 ### Air Focuses ###
 UKR_aviation_effort:0 "우크라이나 공군"
 UKR_aviation_effort_desc:0 "The role of the aircraft in modern warfare shouldn't be underestimated. We must do everything we can to develop a superior air force for Ukraine."
-UKR_fighter_focus:0 "Air Superiority Focus"
+UKR_fighter_focus:0 "공중우세 중점"
 UKR_fighter_focus_desc:0 "The development of well-engineered fighter aircraft will ensure that our own skies are safe and protected from airborne threats and protect our advancing armies from enemy aircraft..."
 UKR_bomber_focus:0 "폭격기떼"
 UKR_bomber_focus_desc:0 "The development of well-engineered bomber aircraft will ensure that our war on the land will be much swifter, and safer, for all our troops. By bombing our enemies' factories and infrastructure we can paralyse them and beat them into submission."
-UKR_aviation_effort_2:0 "Zhuliany Training Base"
+UKR_aviation_effort_2:0 "줄랴니 훈련 기지"
 UKR_aviation_effort_2_desc:0 "We must improve our air infrastructure such as by building a training base at our airbase near Kiev. By doing so we can help develop our pilots' training regiments allowing them to more successfully defend Ukrainian skies from our foes."
-UKR_CAS_effort:0 "Close Air Support"
+UKR_CAS_effort:0 "근접 항공 지원"
 UKR_CAS_effort_desc:0 "Engaging directly with enemy forces on the ground with newly developed aircraft will add a new vector to our assaults and defences."
-UKR_NAV_effort:0 "Black Sea Bombers"
+UKR_NAV_effort:0 "흑해 폭격기"
 UKR_NAV_effort_desc:0 "By integrating a section of our Air Force into the Navy, the Black Sea can be brought more decisively into our own sphere of influence. After all, it is not a Ukrainian lake just yet."
 
 ### Naval Focuses ###
 UKR_naval_effort:0 "우크라이나 해군"
 UKR_naval_effort_desc:0 "A strong fleet is vital if we are to look beyond simply our own borders. Protecting our trade and coastlines shall require a strong naval force."
-UKR_Odessa_Naval:0 "Odessa Harbour"
+UKR_Odessa_Naval:0 "오데사 항구"
 UKR_Odessa_Naval_desc:0 "Odessa was always an important trade port for Ukraine, that's why we must be ready to defend this city with our Black Sea fleet. We should expand the harbour in Odessa."
 UKR_Crimea_Naval:0 "세바스토폴 항구"
 UKR_Crimea_Naval_desc:0 "When we took control over Crimea in 1918, we also got almost the whole Russian Black Sea fleet. Despite that boon, without a proper renovation of the Sevastopol naval base, we will be unable to use it properly. If we want to strengthen our role in the Black Sea region, we must do our best to rebuild the port of Sevastopol."
 UKR_flexible_navy:0 "양대해 해군"
 UKR_flexible_navy_desc:0 "Ukraine spans across two seas, the Black Sea and the Sea of Azov. Differing conditions in both of these mean that a diverse, flexible navy should serve us the best."
-UKR_large_navy:0 "Naval Power Projection"
+UKR_large_navy:0 "해군 전력 계획"
 UKR_large_navy_desc:0 "A large fleet is only suiting for Ukraine, as without it we won't be able to control long coasts of the Black and Azov Seas."
-UKR_submarine_effort:0 "Wolves of the Euxine"
+UKR_submarine_effort:0 "흑해의 늑대들"
 UKR_submarine_effort_desc:0 "The submarine is vital to winning any war against a foe reliant upon trade. If their convoys are sunk, their men go without supplies - this will lead to an easy victory. We must ensure that the Black Sea acts for our enemies as little more than a dark watery grave."
-UKR_cruiser_effort:0 "Each Ship A Bulwark"
+UKR_cruiser_effort:0 "함선 각각의 불워크"
 UKR_cruiser_effort_desc:0 "Native dockyards in Odessa and Nikolaev are more than capable of producing large ships, such as cruisers. These will prove priceless in nearly every naval engagement."
 UKR_destroyer_effort:0 "수송선의 보호자들"
 UKR_destroyer_effort_desc:0 "Our country may be able to support its people in manners of food, but other essential resources must be shipped in from the rest of the world. Destroyers will ensure that this supply is protected."
