--- a/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
@@ -49,132 +49,132 @@ LIT_alliance_for_liberation:0 "IšAl"
 LIT_alliance_for_liberation_long:0 "Alliance for Liberation"
 
 ### Focuses ###
-LIT_black_monday_hit:0 "Aftermath of the Black Monday"
+LIT_black_monday_hit:0 "검은 월요일의 여파"
 LIT_black_monday_hit_desc:0 "The Black Monday is upon us... But the state must hold on! As it always did!"
-LIT_conservative_reform:0 "Begin Industrial Expansion"
+LIT_conservative_reform:0 "산업 확장 시작"
 LIT_conservative_reform_desc:0 "We must develop the industries of our nation to better compete with the Westerners to survive this travesty."
-LIT_industrial_expansion_1:0 "Developing the Capital Region"
+LIT_industrial_expansion_1:0 "수도권 개발"
 LIT_industrial_expansion_1_desc:0 "The region of Vilnius must be developed through large scale industrial effort and subsidies."
-LIT_industrial_expansion_2:0 "Developing the Periphery"
+LIT_industrial_expansion_2:0 "주변부 개발"
 LIT_industrial_expansion_2_desc:0 "Samogitia and the lands surrounding it are backwards compared to the Capital - this must change, immediately."
-LIT_industrial_expansion_3:0 "Rejuvenating the Arms Industry"
+LIT_industrial_expansion_3:0 "무기 산업 활성화"
 LIT_industrial_expansion_3_desc:0 "The nation of Lithuania may be dominated by Germans, but that doesn't mean it can't show it's teeth."
-LIT_liberal_reform:0 "Foundations for a Better State"
+LIT_liberal_reform:0 "더 나은 상태를 위한 기초"
 LIT_liberal_reform_desc:0 "We have the technology, we have the tools - we can shape Lithuania into a nation better for the common man, without the need of a revolution!"
-LIT_economic_controls:0 "Enact Economic Regulation"
+LIT_economic_controls:0 "경제 규제 시행"
 LIT_economic_controls_desc:0 "The banks must be controlled to avoid the stock market crash of 1936, and the poorest of the masses must receive subsidies and a minimum wage to live through."
-LIT_infrastructure_projects:0 "Vieskeliai"
+LIT_infrastructure_projects:0 "거리(Vieskeliai)"
 LIT_infrastructure_projects_desc:0 "If we put the unemployed through a policy of public works projects, we can increase our country's infrastructure and alleviate the economic downturn at the same time."
-LIT_economic_relief:0 "Provide Relief for Small Business"
+LIT_economic_relief:0 "중소기업에 대한 구호품 제공"
 LIT_economic_relief_desc:0 "The state must stand up for the little guy, not the monopolists - we must help the small businesses to stay in the market and expand their reach, in all sectors."
-LIT_economic_recovery:0 "The Industry Has Recovered"
+LIT_economic_recovery:0 "산업 회복"
 LIT_economic_recovery_desc:0 "After intense reform and work, the Lithuanian economy has been saved from collapse! Lietuva, tevyne musu!"
-LIT_fortify_capital:0 "Fortify the Capital"
+LIT_fortify_capital:0 "수도 요새화"
 LIT_fortify_capital_desc:0 "We must create a set of fortifications around our beloved Vilnius to protect it from even the mightiest invaders."
-LIT_peoples_force:0 "The People's Army"
+LIT_peoples_force:0 "인민군"
 LIT_peoples_force_desc:0 "Turning service in the Armed Forces into a patriotic and honourable endeavour instead of two years of waste in the draft can heavily increase our morale and unity."
-LIT_promote_the_rifles:0 "Promote the Riflemen Union"
+LIT_promote_the_rifles:0 "소총수 연합 홍보"
 LIT_promote_the_rifles_desc:0 "The Šauliai (Rifles) of Lithuania were founded in 1919 as a civilian self-defence paramilitary organisation, and has grown popular over the years. It is the first step to military service for many young men. We can use it to our benefit."
-LIT_partisan_warfare:0 "Prepare for Partisan Warfare"
+LIT_partisan_warfare:0 "당파 전쟁 준비"
 LIT_partisan_warfare_desc:0 "Lithuania might not survive another war. With that in mind, we must prepare the people of Lithuania for an armed insurrection when the time is due."
-LIT_army_modernization:0 "Begin Army Modernisation"
+LIT_army_modernization:0 "육군 현대화 시작"
 LIT_army_modernization_desc:0 "Lithuania might not have a lot of men to send to war, but it has a lot of smart minds and innovative people. We can recuperate our disadvantage though a modernised army."
-LIT_fortifications:0 "Expand City Fortifications"
+LIT_fortifications:0 "도시 요새 확장"
 LIT_fortifications_desc:0 "We can turn our beloved nation into a fortress, an unconquerable nation, with fortifications that can last for years."
-LIT_special_forces:0 "Found the LSOF"
+LIT_special_forces:0 "LSOF 발견"
 LIT_special_forces_desc:0 "A modern army needs special forces. The newly created Lithuanian Special Operations Forces are ready to fulfil this need."
-LIT_update_equipment:0 "Update Army Equipment"
+LIT_update_equipment:0 "육군 장비 갱신"
 LIT_update_equipment_desc:0 "We need to focus on building better infantry weapons and artillery to equip our army with."
-LIT_german_assistance:0 "German Military Advisers"
+LIT_german_assistance:0 "독일 군사 고문"
 LIT_german_assistance_desc:0 "Germany is our ally - it can provide us with the how and why on everything from weapons to how to use them effectively."
-LIT_motorized_effort:0 "Motorisation Effort"
+LIT_motorized_effort:0 "차량화 노력"
 LIT_motorized_effort_desc:0 "Let's replace boots to vehicles! It will allow superior mobility and military capabilities compared to what normal infantry can do."
-LIT_armor_effort:0 "Armour Effort"
+LIT_armor_effort:0 "기갑 노력"
 LIT_armor_effort_desc:0 "What says that Lithuanians can't build a tank? Or plenty of them?"
-LIT_military_industrialism:0 "Military Industrialism"
+LIT_military_industrialism:0 "군사 산업주의"
 LIT_military_industrialism_desc:0 "In order to put military innovation to full effect, we must expand our military-industrial complex to fulfil the Army's needs."
-LIT_extra_tech_slot:0 "Extra Research Slot"
+LIT_extra_tech_slot:0 "추가 연구 슬롯"
 LIT_extra_tech_slot_desc:0 "Increased investment in our R&D department and our Universities has led to an increased capacity in research capabilities."
-LIT_zokniai_airbase:0 "Construct the Zokniai Airbase"
+LIT_zokniai_airbase:0 "조크냐이 공군 기지"
 LIT_zokniai_airbase_desc:0 "The land near Šiauliai already holds a small aerodrome, but we can expand it and refurbish it into a full-blown airbase for our and our allies needs."
-LIT_anbo_iv:0 "Promote the ANBO-IV"
+LIT_anbo_iv:0 "ANBO-IV 홍보"
 LIT_anbo_iv_desc:0 "First designed and tested in 1934, the ANBO-IV remains one of Lithuania's top notch fighter aircraft. If we promote updates and upgrades to this fighter, we can come out on top in fighter design in all of the Reichspakt."
-LIT_anbo_viii:0 "Promote the ANBO-VIII"
+LIT_anbo_viii:0 "ANBO-VIII 홍보"
 LIT_anbo_viii_desc:0 "While the ANBO-III and ANBO-IV have some light bombing capabilities, the ANBO-VIII is the first aircraft in Lithuanian history designed with bombing and and tactical strikes in mind. By adopting the ANBO-VIII, we well make a leap to an entirely different direction, but it might be necessary..."
-LIT_operational_integrity:0 "Operational Integrity"
+LIT_operational_integrity:0 "운영 무결성"
 LIT_operational_integrity_desc:0 "Adopt the Operational Integrity doctrine."
-LIT_battlefield_support:0 "Battlefield Support"
+LIT_battlefield_support:0 "전장 지원"
 LIT_battlefield_support_desc:0 "Adopt the Battlefield Support doctrine."
-LIT_balts_with_biplanes:0 "Balts with Biplanes"
+LIT_balts_with_biplanes:0 "발트의 복엽기"
 LIT_balts_with_biplanes_desc:0 "Through aircraft infrastructure funding and superior models, we have come out on top as a true nation with wings! May the Order of the Wings of Vytis shine brightly on your suit, Captain!"
-LIT_election_1938:0 "Election of 1938"
+LIT_election_1938:0 "1938년 선거"
 LIT_election_1938_desc:0 "The Seimas election of 1938 may be the most decisive and important in our nation's history. Whichever path we may take, our future will never be the same..."
-LIT_elc_tooltip:0 "This focus will be automatically unlocked after the Seimas elections event"
-LIT_loyalty:0 "Loyalty - Remain Aligned with Germany"
+LIT_elc_tooltip:0 "이 중점은 의회 선거 이후 자동으로 해제될 것 입니다"
+LIT_loyalty:0 "충성도 - 독일과의 관계 유지"
 LIT_loyalty_desc:0 "It would be disastrous if we tried to break away from the Reichspakt. Let's try to stay in the limits of our situation..."
-LIT_socdem_agenda:0 "LSDP - A Caring Nation for Every Man!"
+LIT_socdem_agenda:0 "LSDP - 모든 사람을 돌보는 나라!"
 LIT_socdem_agenda_desc:0 "The Social Democratic Party of Lithuania has chosen it's policy. We can build Socialism without the need of a revolution!"
-LIT_welfare:0 "Institute Minimum Wage"
+LIT_welfare:0 "연구소 최저 임금"
 LIT_welfare_desc:0 "It's so terrifying that the hardest workers in our nation get paid squat for their labour. Half of our nation is near poverty. By limiting the draconic capitalism rampant and instituting minimum wages that allow men and women to make a living, we can drastically improve this situation."
-LIT_siauliai_affair:0 "The Šiauliai Affair"
+LIT_siauliai_affair:0 "샤울레이 사건"
 LIT_siauliai_affair_desc:0 "By artificially weakening our police forces in select cities and making the radical nationalists believe that they can coup the nation, we can discover and bust their hideouts and eliminate the risk of a 'Speak Lithuanian' takeover."
-LIT_democratic_reform:0 "Reform the Constitution"
+LIT_democratic_reform:0 "헌법 개정"
 LIT_democratic_reform_desc:0 "The Lithuanian Constitution of 1920 was written with a German-dominated Lithuania in mind, and is heavily authoritarian, something that will not fly in our nation. We must call up the Seimas and introduce a better democratic model."
-LIT_crush_syndies:0 "Crush the Radicals"
+LIT_crush_syndies:0 "급진주의자 부수기"
 LIT_crush_syndies_desc:0 "By infiltrating the trade unions in our country and rooting our Syndicalist sympathisers and other radical socialists, we can eliminate the rick of a far-left coup attempt."
-LIT_negotiate_syndies:0 "Negotiate with Trade Unions"
+LIT_negotiate_syndies:0 "노동조합과의 협상"
 LIT_negotiate_syndies_desc:0 "Destroying trade unions would not fit our ideology! We can negotiate with the Lithuanian Labour Federation, invite them to have a role in government matters and introduce some of their proposed reforms. The conservatives will not be happy, however."
-LIT_baltic_model:0 "The Third Way"
+LIT_baltic_model:0 "제 3의 길"
 LIT_baltic_model_desc:0 "We will neither be a backwards reactionary democracy nor a revolutionary Syndicalist commune! We have found the path to success, and it doesn't involve either!"
-LIT_chrdem_agenda:0 "LKD - Society in God's and the Kaiser's Light"
+LIT_chrdem_agenda:0 "LKD - 신과 황제의 빛 속의 사회"
 LIT_chrdem_agenda_desc:0 "The Christian Democratic Party has chosen it's policy. We must retain our loyalty to Germany while promoting the tradition that our forefathers bestowed."
-LIT_crush_radicals:0 "Crush the Radicals"
+LIT_crush_radicals:0 "급진주의자 부수기"
 LIT_crush_radicals_desc:0 "Both the extreme nationalists and the Syndicalists are dangerous to our society, we must root them out of the government and public view."
-LIT_invite_settlers:0 "Invite German Settlers"
+LIT_invite_settlers:0 "독일 정착민 초대"
 LIT_invite_settlers_desc:0 "We can expand the industries of our nation by inviting capable workers and engineers from Germany to work on our factories and industries."
-LIT_revise_constitution:0 "Revise the Constitution"
+LIT_revise_constitution:0 "헌법 개정"
 LIT_revise_constitution_desc:0 "Many people in our nation are bitter about the Constitution of our nation. It doesn't guarantee them the same level of rights as in other nations and is much too autocratic. We can revise it and add additional chapters to appease the people."
-LIT_diplomatic_autonomy:0 "Diplomatic Autonomy"
+LIT_diplomatic_autonomy:0 "외교적 자율성"
 LIT_diplomatic_autonomy_desc:0 "While we may still be a puppet nation, we can negotiate for better terms to allow relative freedom in diplomatic affairs."
-LIT_belarus_alignment:0 "Align with Belorussia"
+LIT_belarus_alignment:0 "벨로루시와의 제휴"
 LIT_belarus_alignment_desc:0 "Though we may have our differences with our neighbours to the south, we must make friends with all those we can in this hostile world. After all, we cannot solely rely on the Reich or the northerners."
-LIT_baltic_alignment:0 "Baltic Unity"
+LIT_baltic_alignment:0 "발트 통합"
 LIT_baltic_alignment_desc:0 "Our Baltic brethren to the north have suffered many of the same things that we went through, and are the closest thing to our brothers in this harsh universe. We need to align with them."
-LIT_baltic_unification:0 "The United Baltic State"
+LIT_baltic_unification:0 "발트 연방"
 LIT_baltic_unification_desc:0 "The Latvians and Estonians are our brethren, and some voices in our government are calling for unification with our neighbours to the north. Should we go with this idea, we shall forever be stronger as part of one, united Baltic state."
-LIT_natdem_agenda:0 "LTIP - Nationalism Under the German Boot"
+LIT_natdem_agenda:0 "LTIP - 독일 군화 아래의 민족주의"
 LIT_natdem_agenda_desc:0 "The Party of Lithuanian National Interests, more commonly known as 'Speak Lithuanian', has chosen it's policy. We can develop Lithuanian nationalism while still aligned with the Kaiser!"
-LIT_promote_paramilitary:0 "Promote the Iron Wolves"
+LIT_promote_paramilitary:0 "철 늑대 홍보"
 LIT_promote_paramilitary_desc:0 "The paramilitary of 'Geležinis vilkas' has been Škirpa's right arm for a very long time, but it is time to legalise them and allow them to run wild."
-LIT_ban_trade_unions:0 "Ban Trade Unions"
+LIT_ban_trade_unions:0 "노동조합 금지"
 LIT_ban_trade_unions_desc:0 "Those pesky workers and their internationalism, they stand in opposition to our government. It's time to take action against these Syndicalist agents and supporters."
-LIT_land_reform:0 "National Land Reform"
+LIT_land_reform:0 "국토 개혁"
 LIT_land_reform_desc:0 "We can take away land from German settlers and companies and give it to the state and loyal Lithuanian capitalists to use. We can concentrate more and more of our country's economy around the state this way."
-LIT_limited_nationalism:0 "Authoritarian Constitution"
+LIT_limited_nationalism:0 "권위주의 헌법"
 LIT_limited_nationalism_desc:0 "What's wrong with a few edits to the country's Constitution? We'll just make sure that it follows our goal of a national Lithuanian state, that's all!"
-LIT_historical_revisionism:0 "Historical Revisionism"
+LIT_historical_revisionism:0 "역사 수정주의"
 LIT_historical_revisionism_desc:0 "Belorussians? In OUR Grand Duchy of Lithuania? Don't make me laugh! It was always Lithuanian! Always great! Always powerful! Until those pesky Poles and Russians ruined it, that's all! We'll make the people believe."
-LIT_anti_slavic_laws:0 "Anti-Slavic Laws"
+LIT_anti_slavic_laws:0 "반-슬라브법"
 LIT_anti_slavic_laws_desc:0 "The Belorussian and Polish minorities in the Vilnius region have been a thorn in our goals, but we hold the power of law making. By forcing all Slavs to Lithuanise their names, abolishing non-Lithuanian schools and discriminating the minorities in local governments, we can assimilate them much more easily."
-LIT_september_8:0 "Declare September 8 as National Day"
+LIT_september_8:0 "9월 8일을 국경일로 선언하다"
 LIT_september_8_desc:0 "September 8, the day when Vytautas the Great was supposed to be coronated King, if not for his untimely death. He was the saviour of Lithuania from Polish dominance, and in these days of German rule, we must look at his persona as an icon of our struggle."
-LIT_republic:0 "Revolt - Declare the Republic!"
+LIT_republic:0 "Revolt - 공화국 선언!"
 LIT_republic_desc:0 "No more German Kings! Nor German settlers! Nor German puppetry! We are free, and we shall always be as such!"
-LIT_desperate_defense:0 "Desperate Defence"
+LIT_desperate_defense:0 "절망적인 방어"
 LIT_desperate_defense_desc:0 "The Germans are upon us! We must calibrate our entire nation to endure! And we will endure, damn it!"
-LIT_nationalization_act:0 "The Nationalisation Act"
+LIT_nationalization_act:0 "국유화 법"
 LIT_nationalization_act_desc:0 "Now that we have freed ourselves from the German grip, it is time for us to get rid of their property. All German wealth, land and factories are ours, nationalise! Kick the Teuton swines out of their country and tell them to never come back!"
-LIT_reorganize_the_state:0 "Reorganise the State"
+LIT_reorganize_the_state:0 "국가 재편성"
 LIT_reorganize_the_state_desc:0 "We must re-calibrate all of the clockwork in the Lithuanian nation and rid it of all German influence. Lietuva lietuviams!"
-LIT_rewrite_the_constitution:0 "Rewrite the Constitution"
+LIT_rewrite_the_constitution:0 "헌법 수정"
 LIT_rewrite_the_constitution_desc:0 "Down with democracy, it's a rotting corpse! We have the power to rewrite the constitution however we please, we will transform Lithuania into what it should have become after the Weltkrieg."
-LIT_iron_wolf_supremacy:0 "Iron Wolf Supremacy"
+LIT_iron_wolf_supremacy:0 "강철 늑대의 패권"
 LIT_iron_wolf_supremacy_desc:0 "The paramilitary of 'Geležinis vilkas' has been Škirpa's right arm for a very long time, but it is time to legalise them and allow them to run wild."
-LIT_vacation_in_varniai:0 "Vacation in Varniai"
+LIT_vacation_in_varniai:0 "바르니에이에서의 휴가"
 LIT_vacation_in_varniai_desc:0 "We have acquired a lot of political prisoners since we came to power. We need a place to put them in. How about we send them to a vacation in Varniai, to where a seminary used to be..."
-LIT_industrial_effort:0 "Industrial Effort"
+LIT_industrial_effort:0 "산업 노력"
 LIT_industrial_effort_desc:0 "Lithuania may not be able to become an industrial giant, but it can still modernise and become a modern developed state with a strong industrial sector."
-LIT_fortress_lithuania:0 "Fortress Lithuania"
+LIT_fortress_lithuania:0 "리투아니아 요새"
 LIT_fortress_lithuania_desc:0 "With enough fortifications and preparation, no foreign power will ever be able to invade Lithuania again."
 
 ### Opinion Modifiers, Flags and Tooltips ###
