--- a/Kaiserreich Korean Translation/localisation/KR_Morocco_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Morocco_l_english.yml
@@ -64,7 +64,7 @@ MOR_industrialize_the_realm:0 "왕국 산업화"
 MOR_industrialize_the_realm_desc:0 "Our nation has made rapid strides in its development, however, our innovation shouldn't stop at the minimum and should continue to lead Morocco into the future"
 
 ### Army ###
-MOR_the_royal_army_of_morocco:0 "모로코 왕립군"
+MOR_the_royal_army_of_morocco:0 "모로코 왕립 육군"
 MOR_the_royal_army_of_morocco_desc:0 "Our army has stood proudly for hundreds of years, however, there are new methods we can take to improve their efficiency and their reputation."
 MOR_learning_with_our_mistakes:0 "실수로부터의 배움"
 MOR_learning_with_our_mistakes_desc:0 "Our army is much too informal and disorganised. A Royal Army should be more than local militias and a improvised leaders. The fact we have noted such issues is a start but we must take action to amend them."
