--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -228,15 +228,15 @@ ukraine.20.t:0 "자유 무역 지대 이익의 결과"
 ukraine.20.d:0 "러시아와의 자유 무역 지대는 그 혜택을 보여주었습니다. 세계대전 이래 버려졌던 국경지대는 현재 수많은 새로운 대장간과 제철소가 있으며, 이전에 밭에서 썩었던 우리의 곡식은 이제 러시아 도시 빈민층의 형태로 거대한 시장에 접근할 수 있게 되었습니다. 실업률은 1918년 이래 최저치를 기록했습니다. 이것은 러시아-우크라이나의 협력이 가져온 성공의 좋은 예입니다!"
 ukraine.20.a:0 "좋았어!"
 ukraine.21.t:0 "효과가 있었던 프로스비타!"
-ukraine.21.d:0 "The activities of the Prosvita Movement have had a demonstrably positive influence on our youth, with membership numbers soaring into the hundreds of thousands at least. A number of young people are ready to defend their country, culture and traditions. They will be perfect recruits for our armed forces."
-ukraine.21.a:0 "That's right young men, enrol in the army!"
+ukraine.21.d:0 "프로스비타 운동의 활동은 최소한 수십만명의 회원수가 급증하면서 우리 젊은이들에게 분명히 긍정적인 영향을 끼쳤습니다. 많은 젊은이들이 그들의 국가, 문화, 전통을 지킬 준비가 되어 있습니다. 그들은 우리 군대를 위한 완벽한 신병이 될 것 입니다."
+ukraine.21.a:0 "바로 그거지 젊은이, 군대에 등록해!"
 ukraine.22.t:0 "지역 언어"
-ukraine.22.d:0 "Though Skoropadsky refused to recognise the Russian language as a second state language, he allowed the Ukrainian regions to choose which languages could be officially recognised. Now that the majority of our regions have recognised the Russian language, Skoropadsky has finally conceded to give it the same position in a national scale."
-ukraine.22.a:0 "'Yazyk' and 'Mova' should have a common future in Ukraine!"
+ukraine.22.d:0 "스코로파즈키는 러시아어를 제 2 외국어로 인정하는 것을 거부했지만 우크라이나 지역에서는 어떤 언어를 공식적으로 인정할 수 있는지 선택할 수 있도록 허용했습니다. 우리 지역의 대다수가 러시아어를 인정했기 때문에, 스코로파즈키는 마침내 러시아어를 전국적인 규모로 같은 지위를 주는 것을 인정했습니다."
+ukraine.22.a:0 "'야지크'와 '모바'는 우크라이나에서 공통된 미래를 가져야 한다!"
 ukraine.23.t:0 "우크라이나 복구 지원 요청"
-ukraine.23.d:0 "The Ukrainian government has asked us for a relatively substantial loan, which they wish to use for the electrification of the poorest grain-growers. One of our major Reichspakt allies and the bastion of our Ostwall against a Russian resurgence, Ukraine's situation is already incredibly unstable, in part due to our protectionist measures during Black Week that proved detrimental to Ukrainian agriculture."
-ukraine.23.a:0 "Very well. Grant them the money."
-ukraine.23.b:0 "Who cares about Ukraine?"
+ukraine.23.d:0 "우크라이나 정부는 가장 가난한 곡물 재배업자들에게 전기를 공급하기 위해 사용하기를 원하는 상대적으로 실질적인 대출을 요청했습니다. 우리의 주요 제국 조약 동맹국 중 하나이자 러시아의 부활에 대한 우리의 동부방벽의 보루인 우크라이나의 상황은, 부분적으로 우크라이나 농업에 해로운 것으로 판명된 검은 일주일 기간 동안 우리의 보호주의적 조치들 때문에, 이미 믿을 수 없을 정도로 불안정합니다."
+ukraine.23.a:0 "아주 좋아. 그들에게 돈을 줘라."
+ukraine.23.b:0 "누가 우크라이나를 신경쓰지?"
 ukraine.24.t:0 "독일이 우리에게 융자를 제공해주다!"
 ukraine.24.d:0 "The German Empire has accepted our request! Now we can invest this money into the electrification of the villages in Central Ukraine, which promises to increase our support amongst the peasantry, boost our agricultural productivity and improve our rural economy. Germany's decision is perhaps not surprising. Ukraine is, after all, a much better place to invest in than Poland!"
 ukraine.24.a:0 "Germany is truly our friend and protector!"
