--- a/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Republic_of_Italy_l_english.yml
@@ -415,10 +415,10 @@ ITA_grand_navy:0 "웅장한 해군"
 ITA_grand_navy_desc:0 "우리 해군은 집중적인 주력함 건조와 함께 급속도로 성장해야만 합니다."
 ITA_heavy_cruisers:0 "중순양함"
 ITA_heavy_cruisers_desc:0 ""
-ITA_battle_cruisers:0 "순양전함"
+ITA_battle_cruisers:0 "장갑순양함"
 ITA_battle_cruisers_desc:0 "Battlecruisers are both fast and armed with formidable heavy main guns. While battlecruisers may lack the armour to form the core of our capital ship fleet, they fill a valuable role."
 ITA_battleships:0 "이탈리아 전함"
-ITA_battleships_desc:0 "Battleships are the pride of any navy. Large, well armoured and armed, and expensive to produce, new battleships entering our naval service will undoubtedly signal to the world that we seek to regain our place in the world."
+ITA_battle_cruisers_desc:0 "Armoured cruisers are both fast and armed with sizable guns. While armoured cruisers may not be sufficient to form the core of our fleet, they fill a valuable role."
 ITA_defend_the_coast:0 "해안선을 방어하라"
 ITA_defend_the_coast_desc:0 "The new navy should be oriented towards the protection of our coastline and disruption of enemy merchant fleets."
 ITA_subs:0 "이탈리아 잠수함"
@@ -551,14 +551,14 @@ ita.18.a:0 "Alcide De Gasperi!"
 ita.18.b:0 "Giovanni Gronchi!"
 
 ita.19.t:0 "[GetYear]년 선거"
-ita.19.d:0 "The [GetYear] Elections are now upon us. Will Prime Minister [From.GetLeader] remain as Prime Minister of the Italian Republic or shall a new party win the election?"
-ita.19.a:0 "Partito Liberale Democratico"
-ita.19.b:0 "Partito Repubblicano Italiano"
-ita.19.c:0 "Partito Popolare Italiano"
+ita.19.d:0 "The [GetYear] Elections are now upon us. Will President [From.GetLeader] remain as the head of the Italian Republic or shall a new party win the election?"
+ita.19.a:0 "자유민주당"
+ita.19.b:0 "이탈리아 공화당"
+ita.19.c:0 "이탈리아 민중당"
 ita.19.e:0 "Lega Democratica Riformista"
 
 ita.20.t:0 "[GetYear]년 선거"
-ita.20.d:0 "Today there is another election for prime minister of the Kingdom of Italy. There are four parties running in the election. Whom shall the people choose to be their prime minister?"
+ita.20.d:0 "Today there is another election for prime minister of the Kingdom of Italy. There are four parties running in the election. Whom shall the people choose to be their representative?"
 ita.20.a:0 "Partito Liberale Democratico"
 ita.20.b:0 "Partito Repubblicano Italiano"
 ita.20.c:0 "Partito Popolare Italiano"
@@ -771,22 +771,24 @@ ita.71.t:0 "The Pope arrives in Venice"
 ita.71.d:0 "The Pope arrived today in Venice. After a mass in San Marco's Basilica, the meeting has begun within the old Doge's palace. Let us hope that the Pope responds reasonably to our proposal."
 ita.71.a:0 "Welcome your holiness"
 
-ita.72.t:0 "The pope refuses to come"
-ita.72.d:0 "The pope has refused to come to Venice. The only path to Rome is now war."
-ita.72.a:0 "Then let it be war"
+ita.72.t:0 "The Pope Refuses to Attend"
+ita.72.d:0 "The Pope has refused to come to Venice. The only path to Rome is now war."
+ita.72.a:0 "Then let it be war!"
+ita.72.b:0 "That is upsetting"
 #WORK POINT
 ita.73.t:0 "The Leonine Proposal"
 ita.73.d:0 "A proposal from the Republic of Italy has been presented to us, under which the Papal States would be annexed excluding the Leonine City, which would remain completely independent and ruled by the Pope. It also suggests that a number of buildings be granted tax exemption, principally papal estates and monasteries. Moreover, the Republic of Italy will pay the Leonine city for the loss in 1870 of territories and property, plus the losses they will incur now."
-ita.73.a:0 "Sign the treaty(game over)"
+ita.73.a:0 "Sign the treaty (game over)"
 ita.73.b:0 "Refuse the treaty"
 
 ita.74.t:0 "The Pope Signs the Treaty"
 ita.74.d:0 "Our entirely reasonable proposal has been accepted by the Pope, under which the Papal States will be annexed excluding the Leonine City, which will remain completely independent and ruled by the Pope. A number of buildings will be granted a tax exemption, principally papal estates and monasteries, and we will pay the Leonine city for the loss in 1870 of territories and property, plus the losses incurred by this new agreement."
 ita.74.a:0 "A great Day for Italy"
 
-ita.75.t:0 "The Pope refuses our treaty"
+ita.75.t:0 "The Pope Refuses"
 ita.75.d:0 "The Pope has refused our generous terms. Now the only path to Rome is war."
-ita.75.a:0 "Then Let it be War"
+ita.75.a:0 "Then let it be war!"
+ita.75.b:0 "That is upsetting"
 
 ita.76.t:0 "The Papal States are Annexed"
 ita.76.d:0 "The Papal States have recently been annexed by the Republic of Italy. This will not stand. The Pope and thus the Papal States were under our protection and influence. There is quite a large voice within the government demanding that we go to war over this, while others argue that we should bid our time."
