--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -719,7 +719,7 @@ rus_galicia_tooltip:0 "§Y카우나스§!, §Y비제메§!, §Y민스크§!, §Y
 rus_poland_tooltip:0 "§Y비제메§!, §Y민스크§!, §Y키예프§!, §Y크림반도§!와 §Y하리코프§!를 소유하거나 괴뢰국이 가지고 있음"
 rus_poland_kaunas_tooltip:0 "§Y카우나스§!를 소유하거나 괴뢰국이 가지고 있거나 폴란드가 소유하고 있음"
 RUS_fin_accepted_demand_karelia:0 "핀란드가 우리 요구를 받아들임"
-rus_finland_tooltip:0 "§Y카리알라§!, §Y살라§!, §Y무르만스크§!, §Y페차모§!와 §Y올로네츠§!를 소유하거나 괴뢰국이 가지고 있음"
+rus_finland_tooltip:0 "§Y카리알라§!, §Y살라§!, §Y무르만스크§!, §Y페첸가§!와 §Y올로네츠§!를 소유하거나 괴뢰국이 가지고 있음"
 RUS_KRSKY_DEATH:0 "케렌스키 대통령이 서거함"
 russia_transsib_infras:0 "We liberated the Siberian part of the Transsiberian railroad, occupied by Sternberg and can reach the Amur River!"
 RUS_buy_bonds_war_GER:0 "§RGermany will view this as an act of aggression and may declare war on us.§!\n"
