--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -10,7 +10,7 @@ l_english:
  STATE_8:0 "룩셈부르크"
  STATE_9:0 "체히"
  STATE_10:0 "바르샤바"
- STATE_11:0 "빌뉴스"
+ STATE_11:0 "카우나스"
  STATE_12:0 "리플란트"
  STATE_14:0 "오트브르타뉴"
  STATE_13:0 "레벨"
@@ -94,8 +94,8 @@ l_english:
  STATE_92:0 "루블린"
  STATE_93:0 "베레스탸"
  STATE_94:0 "슬로님"
- STATE_95:0 "노보흐루도크"
- STATE_96:0 "마힐료우"
+ STATE_95:0 "나바흐루다크"
+ STATE_96:0 "빌뉴스"
  STATE_97:0 "비아위스토크"
  STATE_98:0 "프워츠크"
  STATE_99:0 "유틀란트"
@@ -182,7 +182,7 @@ l_english:
  STATE_180:0 "포르투"
  STATE_181:0 "구아르다"
  STATE_182:0 "크레타"
- STATE_183:0 "크브르스"
+ STATE_183:0 "키브리스"
  STATE_184:0 "벨로모르스카트라키야"
  STATE_185:0 "에피루스"
  STATE_186:0 "펠로폰네소스"
@@ -209,7 +209,7 @@ l_english:
  STATE_207:0 "오르샤"
  STATE_208:0 "루가"
  STATE_209:0 "프스코프"
- STATE_210:0 "비텝스크"
+ STATE_210:0 "벨리키예루키"
  STATE_211:0 "부르가스"
  STATE_212:0 "플로브디프"
  STATE_213:0 "무르만스크"
@@ -227,11 +227,11 @@ l_english:
  STATE_225:0 "수미"
  STATE_226:0 "카테리노슬라우"
  STATE_227:0 "유좁카"
- STATE_228:0 "루한스크"
+ STATE_228:0 "스타로빌스크"
  STATE_229:0 "아제르바이잔"
  STATE_230:0 "하야스탄"
  STATE_231:0 "사카르트벨로"
- STATE_232:0 "그로즈니"
+ STATE_232:0 "포트페트롭스크"
  STATE_233:0 "블라디캅카스"
  STATE_234:0 "예카테리노다르"
  STATE_235:0 "스타브로폴"
@@ -352,7 +352,7 @@ l_english:
  STATE_350:0 "디야르바키르"
  STATE_351:0 "볼로그다"
  STATE_352:0 "반"
- STATE_353:0 "암도"
+ STATE_353:0 "유슈"
  STATE_354:0 "귀뮈샤네"
  STATE_355:0 "삼순"
  STATE_356:0 "시노프"
@@ -585,10 +585,10 @@ l_english:
  STATE_583:0 "쿠스타나이"
  STATE_584:0 "카라쿰 사막"
  STATE_585:0 "키질쿰"
- STATE_586:0 "비슈케크"
+ STATE_586:0 "피슈페크"
  STATE_587:0 "포트알렉산드로비치"
  STATE_588:0 "파블로다르"
- STATE_589:0 "베르니"
+ STATE_589:0 "세미레치예"
  STATE_590:0 "아크몰린스크"
  STATE_591:0 "치옹야"
  STATE_592:0 "광저우"
@@ -616,9 +616,9 @@ l_english:
  STATE_614:0 "지동"
  STATE_615:0 "진동"
  STATE_616:0 "오르도스"
- STATE_617:0 "우루무치"
+ STATE_617:0 "디화"
  STATE_618:0 "중가리아"
- STATE_619:0 "야르칸드"
+ STATE_619:0 "카슈가르"
  STATE_620:0 "장한"
  STATE_621:0 "수이유안"
  STATE_622:0 "산시"
@@ -721,7 +721,7 @@ l_english:
  STATE_719:0 "나탈"
  STATE_720:0 "성페드로섬"
  STATE_721:0 "포르투갈령 티모르"
- STATE_722:0 "페차모"
+ STATE_722:0 "페첸가"
  STATE_723:0 "남섬"
  STATE_724:0 "크라 지협"
  STATE_725:0 "나보도"
