--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -113,7 +113,7 @@ l_english:
  STRATEGICREGION_113:0 "남부 중앙 태평양 "
  STRATEGICREGION_114:0 "북태평양"
  STRATEGICREGION_115:0 "북동태평양"
- STRATEGICREGION_116:0 "이란"
+ STRATEGICREGION_116:0 "페르시아"
  STRATEGICREGION_117:1 "남서"
  STRATEGICREGION_118:0 "서해안"
  STRATEGICREGION_119:1 "남서"
