--- a/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Switzerland_l_english.yml
@@ -360,9 +360,6 @@ swiss.7.a:0 "하지 않는다."
 swiss.7.b:0 "약간의 선거 운동."
 swiss.7.c:0 "보통 규모의 선거 운동."
 swiss.7.e:0 "광범위한 선거 운동."
-swiss.8.t:0 "국민 투표 중"
-swiss.8.d:0 "이 이벤트는 플레이어에게 보이지 않아야 합니다. 만약 보인다면, 버그 리포트를 하십시오."
-swiss.8.a:0 "제발요!"
 swiss.9.t:0 "헌법 개정 국민투표 통과"
 swiss.9.d:0 "The referendum has succeeded, and state forces have been given greater freedoms in their ability to combat extremist threats to the stability of the nation."
 swiss.9.a:0 "Wonderful!"
@@ -1093,6 +1090,14 @@ SWI_martial_law_declared: "Martial Law has been declared"
 SWI_natpop_control:0 "The Government has been secured"
 SWI_nationalized_assets:0 "Nationalized our Assets"
 SWI_completed_purge:0 "Cleared the Officer Corps of Syndicalists"
+SWI_language_acts_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Stability §!§Mif passed.§!"
+SWI_revise_constitution_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y War Support §!§Mif passed.§!"
+SWI_combat_economic_crisis_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Industrial Research §!§Mif passed.§!"
+SWI_syndicalist_unions_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Lower Syndicalist Influence §!§Mif passed.§!"
+SWI_army_reorganization_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Land Doctrine §!§Mif passed.§!"
+SWI_freemasonry_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Political Power §!§Mif passed.§!"
+SWI_transport_of_goods_tooltip:0 "§MThis will begin a referendum that will provide the nation with§!§Y Construction Research §!§Mif passed.§!"
+
 POLITICS_BIRCHER_DESC:0 "A Germanophile and diehard anti-Syndicalist, Eugen Bircher is a physician by trade and invented several groundbreaking procedures dealing with arthroscopy of the knee. After the rise of Syndicalism in France Bircher largely gave up his medical work and founded the SVV, which quickly pervaded Swiss military and political circles as a counterbalance to the rising tide of Socialism in the nation."
 POLITICS_SWI_UNION_DESC:0 "The Federal Union Council is the temporary governmental body of the Swiss Syndicalist state after the overthrow of the government, dedicated to the stabilization and reformation of the Swiss nation."
 POLITICS_EXECUTIVE_DIRECTORY_DESC:0 "The Executive Directory acts as the permanent Helvetic Head of State in the wake of the revolution, occupying a similar position to the Federal Council of old, but with more executive power vested in the Directory to allow for more decisive action to be taken in times of crisis."
